--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
     <div class="container">
       <button class="blocky-btn" id="strongholdSeedBtn">Generate Seed</button>
       <div class="download-box" id="strongholdDownloadBox">
-        <a href="strongholdvillagefsg.mcpack" download class="blocky-btn filter-btn">Download Stronghold Village FSG Pack</a>
+        <a href="StrongholdVillageFsg.mcpack" download class="blocky-btn filter-btn">Download Stronghold Village FSG Pack</a>
       </div>
       <div class="seed-box" id="strongholdSeedBox"></div>
       <div class="cooldown" id="strongholdCooldownMsg"></div>
@@ -748,7 +748,7 @@ async function logToGoogleSheet(seed, filterType) {
     try {
       const [packlessStrongholdRes, strongholdRes, ruinedPortalRes, classicRes] = await Promise.all([
         fetch("stronghold.json"),
-        fetch("stronghold.json"),
+        fetch("packshvil.json"),
         fetch("ruinedportal.json"),
         fetch("classic.json")
       ]);
