--- a/index.html
+++ b/index.html
@@ -693,8 +693,8 @@
     <div class="help-content">
       <p>This generator will guarantee very good seeds to practice.
 There are three filters: <br>
-
-Stronghold Village: guarantees a very close village stronghold and fastion in nether. <br>
+Stronghold Village: guaranteed stronghold village and fastion in the nether. <br>
+Stronghold Village (packless): same as stronghold village, but doesn't require a pack (and therefore has less seeds). <br>
 Ruined Portal: guarantees a very close ruined portal with looting 3 sword, 27 iron nuggets, a flint and steel, 8-9 obsidian and a golden axe and pickaxe (with the pack). There is fastion in nether, and the strongholds are guaranteed to be within 2000 blocks from 0 0, which means that educated travel is guaranteed to be good. <br>
 Classic: guarantees stronghold village and insta fort, greatly increased pearl rates for classic. <br>
         For any additional info, request and feedback join the discord. Coded by ma_ehy</p>
