--- a/index.html
+++ b/index.html
@@ -961,3 +961,8 @@ async function logToGoogleSheet(seed, filterType) {
   setupCopyOnDoubleClick('classicSeedBox');
 
   loadSeeds();
+
+  </script>
+
+</body>
+</html>
