--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ There are multiple filters: <br>
 Stronghold Village: guaranteed stronghold village and fastion in the nether. <br>
 Stronghold Village (packless): same as stronghold village, but doesn't require a pack (and therefore has less seeds). <br>
 Ruined Portal: guarantees a very close ruined portal with looting 3 sword, 27 iron nuggets, a flint and steel, 8-9 obsidian and a golden axe and pickaxe (with the pack). There is fastion in nether, and the strongholds are guaranteed to be within 2000 blocks from 0 0, which means that educated travel is guaranteed to be good. <br>
-Village: guarantees a village spawn with good resources and structures. <br>
+Village: guarantees a village (not stronghold) + 10 lava blocks rp or mega canyon, fastion in nether, sh within 2k of 0 0. <br>
 Classic: guarantees stronghold village and insta fort, greatly increased pearl rates for classic. <br>
         For any additional info, request and feedback join the discord. Coded by ma_ehy</p>
     </div>
