--- a/index.html
+++ b/index.html
@@ -894,8 +894,8 @@ Structureless: seeds optimized for structureless runs. <br>
       document.body.classList.remove('blue-theme', 'red-theme', 'orange-theme', 'gold-theme');
       document.body.classList.add('purple-theme');
     } else {
-      document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'light-blue-theme');
-    }
+  document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme');
+}
 
     currentPage = pageId;
   }
