--- a/index.html
+++ b/index.html
@@ -874,30 +874,30 @@ Structureless: seeds optimized for structureless runs. <br>
   }
 
   window.goToPage = function(pageId) {
-    document.querySelectorAll('.page').forEach(page => page.classList.remove('active'));
-    document.getElementById(pageId).classList.add('active');
+  document.querySelectorAll('.page').forEach(page => page.classList.remove('active'));
+  document.getElementById(pageId).classList.add('active');
 
-    if (pageId === 'packlessStrongholdPage') {
-      document.body.classList.remove('red-theme', 'gold-theme', 'orange-theme', 'light-blue-theme');
-      document.body.classList.add('blue-theme');
-    } else if (pageId === 'ruinedPortalPage') {
-      document.body.classList.remove('blue-theme', 'gold-theme', 'orange-theme', 'light-blue-theme');
-      document.body.classList.add('red-theme');
-    } else if (pageId === 'villagePage') {
-      document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'light-blue-theme');
-      document.body.classList.add('orange-theme');
-    } else if (pageId === 'classicPage') {
-      document.body.classList.remove('blue-theme', 'red-theme', 'orange-theme', 'light-blue-theme');
-      document.body.classList.add('gold-theme');
-    } else if (pageId === 'structurelessPage') {
-      document.body.classList.remove('blue-theme', 'red-theme', 'orange-theme', 'gold-theme');
-      document.body.classList.add('purple-theme');
-    } else {
-  document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme');
-}
-
-    currentPage = pageId;
+  if (pageId === 'packlessStrongholdPage') {
+    document.body.classList.remove('red-theme', 'gold-theme', 'orange-theme', 'purple-theme');
+    document.body.classList.add('blue-theme');
+  } else if (pageId === 'ruinedPortalPage') {
+    document.body.classList.remove('blue-theme', 'gold-theme', 'orange-theme', 'purple-theme');
+    document.body.classList.add('red-theme');
+  } else if (pageId === 'villagePage') {
+    document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'purple-theme');
+    document.body.classList.add('orange-theme');
+  } else if (pageId === 'classicPage') {
+    document.body.classList.remove('blue-theme', 'red-theme', 'orange-theme', 'purple-theme');
+    document.body.classList.add('gold-theme');
+  } else if (pageId === 'structurelessPage') {
+    document.body.classList.remove('blue-theme', 'red-theme', 'orange-theme', 'gold-theme');
+    document.body.classList.add('purple-theme');
+  } else {
+    document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme');
   }
+
+  currentPage = pageId;
+}
 
   function getRandomSeed(seedArray) {
     const idx = Math.floor(Math.random() * seedArray.length);
