--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@ Stronghold Village (packless): same as stronghold village, but doesn't require a
 Ruined Portal: guarantees a very close ruined portal with looting 3 sword, 27 iron nuggets, a flint and steel, 8-9 obsidian and a golden axe and pickaxe (with the pack). There is fastion in nether, and the strongholds are guaranteed to be within 2000 blocks from 0 0, which means that educated travel is guaranteed to be good. <br>
 Village: guarantees a village (not stronghold) + 10 lava blocks rp or mega canyon, fastion in nether, sh within 2k of 0 0. <br>
 Classic: guarantees stronghold village and insta fort, greatly increased pearl rates for classic. <br>
-Structureless: seeds optimized for structureless runs. <br>
+Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion in nether, sh within 2k form 0 0. <br>
         For any additional info, request and feedback join the discord. Coded by ma_ehy</p>
     </div>
   </div>
