--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
     #BA68C8 50%, 
     #7B1FA2 100%);
 }
+
+body.dark-blue-theme {
+  background: linear-gradient(135deg, 
+    #0D47A1 0%, 
+    #1565C0 50%, 
+    #0A3D91 100%);
+}
+
+body.silver-theme {
+  background: linear-gradient(135deg, 
+    #9E9E9E 0%, 
+    #BDBDBD 50%, 
+    #757575 100%);
+}
   
     body::before {
       content: '';
@@ -311,6 +325,41 @@
 .purple-btn:active:not([disabled]) {
   background: #7B1FA2;
 }
+
+.dark-blue-btn {
+  background: linear-gradient(45deg, 
+    #0D47A1, 
+    #0A3D91);
+  border-color: #0A3D91;
+}
+
+.dark-blue-btn:hover:not([disabled]) {
+  background: linear-gradient(45deg, 
+    #0A3D91, 
+    #0D47A1);
+}
+
+.dark-blue-btn:active:not([disabled]) {
+  background: #0A3D91;
+}
+
+.silver-btn {
+  background: linear-gradient(45deg, 
+    #9E9E9E, 
+    #757575);
+  border-color: #757575;
+}
+
+.silver-btn:hover:not([disabled]) {
+  background: linear-gradient(45deg, 
+    #757575, 
+    #9E9E9E);
+}
+
+.silver-btn:active:not([disabled]) {
+  background: #757575;
+}
+    
     .filter-box {
       background: var(--minecraft-black);
       border: 6px solid var(--minecraft-dark-gray);
@@ -658,6 +707,7 @@
         <button class="blocky-btn filter-btn" onclick="goToPage('strongholdPage')">Stronghold Village</button>
         <button class="blocky-btn filter-btn red-btn" onclick="goToPage('ruinedPortalPage')">Ruined Portal</button>
         <button class="blocky-btn filter-btn blue-btn" onclick="goToPage('miscPage')">Miscellaneous</button>
+        <button class="blocky-btn filter-btn dark-blue-btn" onclick="goToPage('rankedMainPage')">Ranked</button>
       </div>
     </div>
     <div class="discord">
@@ -794,6 +844,82 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
     </div>
   </div>
 
+  <!-- Ranked Main Page -->
+<div id="rankedMainPage" class="page">
+  <button class="blocky-btn back-btn" onclick="goToPage('filterPage')">← Back</button>
+  <button class="blocky-btn help-btn" onclick="goToPage('rankedHelpPage')">Help</button>
+  <h1>Ranked Mode</h1>
+  <div class="filter-box">
+    Choose an Option
+    <div class="filter-options">
+      <button class="blocky-btn filter-btn silver-btn" onclick="goToPage('ranked116Page')">1.16</button>
+      <div class="download-box">
+        <a href="ranked-addon.mcaddon" download class="blocky-btn filter-btn" style="background: linear-gradient(45deg, var(--minecraft-green), var(--minecraft-dark-green)); border-color: var(--minecraft-dark-green);">Download Ranked Add-on</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Ranked 1.16 Filter Selection Page -->
+<div id="ranked116Page" class="page">
+  <button class="blocky-btn back-btn" onclick="goToPage('rankedMainPage')">← Back</button>
+  <button class="blocky-btn help-btn" onclick="goToPage('rankedHelpPage')">Help</button>
+  <h1>Ranked 1.16 Filters</h1>
+  <div class="filter-box">
+    Choose a Filter
+    <div class="filter-options">
+      <button class="blocky-btn filter-btn red-btn" onclick="goToPage('rankedRuinedPortalPage')">Ranked Ruined Portal</button>
+      <button class="blocky-btn filter-btn" onclick="goToPage('rankedStrongholdPage')">Ranked Stronghold Village</button>
+      <button class="blocky-btn filter-btn orange-btn" onclick="goToPage('rankedVillagePage')">Ranked Village</button>
+    </div>
+  </div>
+</div>
+
+<!-- Ranked Ruined Portal Generator Page -->
+<div id="rankedRuinedPortalPage" class="page">
+  <button class="blocky-btn back-btn" onclick="goToPage('ranked116Page')">← Back</button>
+  <button class="blocky-btn help-btn" onclick="goToPage('rankedHelpPage')">Help</button>
+  <h1>Ranked Ruined Portal Generator</h1>
+  <div class="container">
+    <button class="blocky-btn" id="rankedRuinedPortalSeedBtn">Generate Seed</button>
+    <div class="seed-box" id="rankedRuinedPortalSeedBox"></div>
+    <div class="cooldown" id="rankedRuinedPortalCooldownMsg"></div>
+  </div>
+</div>
+
+<!-- Ranked Stronghold Village Generator Page -->
+<div id="rankedStrongholdPage" class="page">
+  <button class="blocky-btn back-btn" onclick="goToPage('ranked116Page')">← Back</button>
+  <button class="blocky-btn help-btn" onclick="goToPage('rankedHelpPage')">Help</button>
+  <h1>Ranked Stronghold Village Generator</h1>
+  <div class="container">
+    <button class="blocky-btn" id="rankedStrongholdSeedBtn">Generate Seed</button>
+    <div class="seed-box" id="rankedStrongholdSeedBox"></div>
+    <div class="cooldown" id="rankedStrongholdCooldownMsg"></div>
+  </div>
+</div>
+
+<!-- Ranked Village Generator Page -->
+<div id="rankedVillagePage" class="page">
+  <button class="blocky-btn back-btn" onclick="goToPage('ranked116Page')">← Back</button>
+  <button class="blocky-btn help-btn" onclick="goToPage('rankedHelpPage')">Help</button>
+  <h1>Ranked Village Generator</h1>
+  <div class="container">
+    <button class="blocky-btn" id="rankedVillageSeedBtn">Generate Seed</button>
+    <div class="seed-box" id="rankedVillageSeedBox"></div>
+    <div class="cooldown" id="rankedVillageCooldownMsg"></div>
+  </div>
+</div>
+
+<!-- Ranked Help Page -->
+<div id="rankedHelpPage" class="page">
+  <button class="blocky-btn back-btn" onclick="goToPage('rankedMainPage')">← Back</button>
+  <h1>Ranked Help</h1>
+  <div class="help-content">
+    <p>[Placeholder text - fill this in later with your ranked mode information]</p>
+  </div>
+</div>
+
 <script>
   let strongholdSeeds = [];
   let packlessStrongholdSeeds = [];
@@ -801,6 +927,9 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
   let villageSeeds = [];
   let classicSeeds = [];
   let structurelessSeeds = [];
+  let rankedRuinedPortalSeeds = [];
+  let rankedStrongholdSeeds = [];
+  let rankedVillageSeeds = [];
 
   // Google Apps Script Web App URL for logging
   const GOOGLE_SHEET_URL = 'https://script.google.com/macros/s/AKfycbxMxZ9zStBmy6ERJk1ne6_-zH8eOEce5ISf_wcWYmq2tHYhrwKmNSaYZ_LzDYEHQn3mIQ/exec';
@@ -812,7 +941,10 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
     ruinedPortal: { active: false, time: 10 },
     village: { active: false, time: 10 },
     classic: { active: false, time: 10 },
-    structureless: { active: false, time: 10 }
+    structureless: { active: false, time: 10 },
+    rankedRuinedPortal: { active: false, time: 10 },
+    rankedStronghold: { active: false, time: 10 },
+    rankedVillage: { active: false, time: 10 }
   };
   let intervals = {};
 
@@ -846,13 +978,16 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
   // Load seeds from JSON
   async function loadSeeds() {
     try {
-      const [packlessStrongholdRes, strongholdRes, ruinedPortalRes, villageRes, classicRes, structurelessRes] = await Promise.all([
+      const [packlessStrongholdRes, strongholdRes, ruinedPortalRes, villageRes, classicRes, structurelessRes, rankedRuinedPortalRes, rankedStrongholdRes, rankedVillageRes] = await Promise.all([
         fetch("stronghold.json"),
         fetch("packshvil.json"),
         fetch("ruinedportal.json"),
         fetch("village.json"),
         fetch("classic.json"),
-        fetch("structureless.json")
+        fetch("structureless.json"),
+        fetch("ranked-ruined-portal.json"),
+        fetch("ranked-stronghold.json"),
+        fetch("ranked-village.json")
       ]);
 
       packlessStrongholdSeeds = await packlessStrongholdRes.json();
@@ -861,6 +996,9 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
       villageSeeds = await villageRes.json();
       classicSeeds = await classicRes.json();
       structurelessSeeds = await structurelessRes.json();
+      rankedRuinedPortalSeeds = await rankedRuinedPortalRes.json();
+      rankedStrongholdSeeds = await rankedStrongholdRes.json();
+      rankedVillageSeeds = await rankedVillageRes.json();
 
       document.getElementById("packlessStrongholdSeedBtn").disabled = false;
       document.getElementById("strongholdSeedBtn").disabled = false;
@@ -868,6 +1006,9 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
       document.getElementById("villageSeedBtn").disabled = false;
       document.getElementById("classicSeedBtn").disabled = false;
       document.getElementById("structurelessSeedBtn").disabled = false;
+      document.getElementById("rankedRuinedPortalSeedBtn").disabled = false;
+      document.getElementById("rankedStrongholdSeedBtn").disabled = false;
+      document.getElementById("rankedVillageSeedBtn").disabled = false;
     } catch (err) {
       console.error("Error loading seeds:", err);
     }
@@ -892,9 +1033,23 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
   } else if (pageId === 'structurelessPage') {
     document.body.classList.remove('blue-theme', 'red-theme', 'orange-theme', 'gold-theme');
     document.body.classList.add('purple-theme');
+    } else if (pageId === 'rankedMainPage' || pageId === 'rankedHelpPage') {
+  document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme', 'silver-theme');
+  document.body.classList.add('dark-blue-theme');
+} else if (pageId === 'ranked116Page') {
+  document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme', 'dark-blue-theme');
+  document.body.classList.add('silver-theme');
+} else if (pageId === 'rankedRuinedPortalPage') {
+  document.body.classList.remove('blue-theme', 'gold-theme', 'orange-theme', 'purple-theme', 'dark-blue-theme', 'silver-theme');
+  document.body.classList.add('red-theme');
+} else if (pageId === 'rankedStrongholdPage') {
+  document.body.classList.remove('red-theme', 'gold-theme', 'orange-theme', 'purple-theme', 'dark-blue-theme', 'silver-theme');
+  document.body.classList.add('blue-theme');
+} else if (pageId === 'rankedVillagePage') {
+  document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'purple-theme', 'dark-blue-theme', 'silver-theme');
+  document.body.classList.add('orange-theme');
   } else {
-    document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme');
-  }
+  document.body.classList.remove('blue-theme', 'red-theme', 'gold-theme', 'orange-theme', 'purple-theme', 'dark-blue-theme', 'silver-theme');
   currentPage = pageId;
 }
 
@@ -1000,12 +1155,51 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
     }
   });
 
+  // Ranked Ruined Portal Generator
+document.getElementById('rankedRuinedPortalSeedBtn').addEventListener('click', () => {
+  if (!cooldowns.rankedRuinedPortal.active && rankedRuinedPortalSeeds.length > 0) {
+    const seedBox = document.getElementById('rankedRuinedPortalSeedBox');
+    const seed = getRandomSeed(rankedRuinedPortalSeeds);
+    seedBox.textContent = seed;
+    seedBox.style.display = 'flex';
+    logToGoogleSheet(seed, 'Ranked Ruined Portal');
+    startCooldown('rankedRuinedPortal');
+  }
+});
+
+// Ranked Stronghold Village Generator
+document.getElementById('rankedStrongholdSeedBtn').addEventListener('click', () => {
+  if (!cooldowns.rankedStronghold.active && rankedStrongholdSeeds.length > 0) {
+    const seedBox = document.getElementById('rankedStrongholdSeedBox');
+    const seed = getRandomSeed(rankedStrongholdSeeds);
+    seedBox.textContent = seed;
+    seedBox.style.display = 'flex';
+    logToGoogleSheet(seed, 'Ranked Stronghold Village');
+    startCooldown('rankedStronghold');
+  }
+});
+
+// Ranked Village Generator
+document.getElementById('rankedVillageSeedBtn').addEventListener('click', () => {
+  if (!cooldowns.rankedVillage.active && rankedVillageSeeds.length > 0) {
+    const seedBox = document.getElementById('rankedVillageSeedBox');
+    const seed = getRandomSeed(rankedVillageSeeds);
+    seedBox.textContent = seed;
+    seedBox.style.display = 'flex';
+    logToGoogleSheet(seed, 'Ranked Village');
+    startCooldown('rankedVillage');
+  }
+});
+
   document.getElementById("packlessStrongholdSeedBtn").disabled = true;
   document.getElementById("strongholdSeedBtn").disabled = true;
   document.getElementById("ruinedPortalSeedBtn").disabled = true;
   document.getElementById("villageSeedBtn").disabled = true;
   document.getElementById("classicSeedBtn").disabled = true;
   document.getElementById("structurelessSeedBtn").disabled = true;
+  document.getElementById("rankedRuinedPortalSeedBtn").disabled = true;
+  document.getElementById("rankedStrongholdSeedBtn").disabled = true;
+  document.getElementById("rankedVillageSeedBtn").disabled = true;
 
   function setupCopyOnDoubleClick(boxId) {
     const box = document.getElementById(boxId);
@@ -1030,6 +1224,9 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
   setupCopyOnDoubleClick('villageSeedBox');
   setupCopyOnDoubleClick('classicSeedBox');
   setupCopyOnDoubleClick('structurelessSeedBox');
+  setupCopyOnDoubleClick('rankedRuinedPortalSeedBox');
+  setupCopyOnDoubleClick('rankedStrongholdSeedBox');
+  setupCopyOnDoubleClick('rankedVillageSeedBox');
 
   loadSeeds();
 
