--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ body.silver-theme {
 
 body.bronze-theme {
   background: linear-gradient(135deg, 
-    #fbff1f 0%, 
-    #e8eb0f 50%, 
-    #d4d700 100%);
+    #ffbc1f 0%, 
+    #f5a000 50%, 
+    #e89500 100%);
 }
     
     body::before {
@@ -368,19 +368,19 @@ body.bronze-theme {
 
 .bronze-btn {
   background: linear-gradient(45deg, 
-    #fbff1f, 
-    #d4d700);
-  border-color: #d4d700;
+    #ffbc1f, 
+    #e89500);
+  border-color: #e89500;
 }
 
 .bronze-btn:hover:not([disabled]) {
   background: linear-gradient(45deg, 
-    #d4d700, 
-    #fbff1f);
+    #e89500, 
+    #ffbc1f);
 }
 
 .bronze-btn:active:not([disabled]) {
-  background: #d4d700;
+  background: #e89500;
 }
     
     .filter-box {
@@ -876,7 +876,7 @@ Structureless: guarantees mega canyon at spawn for enter and iron ore, fastion i
     Choose a Filter
     <div class="filter-options">
       <button class="blocky-btn filter-btn red-btn" onclick="goToPage('rankedRuinedPortalPage')">Ranked Ruined Portal</button>
-      <button class="blocky-btn filter-btn" onclick="goToPage('rankedStrongholdPage')">Ranked Stronghold Village</button>
+      <button class="blocky-btn filter-btn blue-btn" onclick="goToPage('rankedStrongholdPage')">Ranked Stronghold Village</button>
       <button class="blocky-btn filter-btn orange-btn" onclick="goToPage('rankedVillagePage')">Ranked Village</button>
     </div>
     <div class="download-box" style="margin-top: 30px;">
