--- a/index.html
+++ b/index.html
@@ -607,10 +607,29 @@ body.bronze-theme {
         font-size: 1.5rem;
       }
 
-      .back-btn, .help-btn {
-        font-size: 1.2rem;
-        padding: 8px 15px;
-      }
+.back-btn, .help-btn {
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  background: linear-gradient(45deg, 
+    var(--minecraft-brown), 
+    var(--minecraft-dark-brown));
+  border-color: var(--minecraft-dark-brown);
+  margin: 0;
+}
+
+.back-btn:hover:not([disabled]), .help-btn:hover:not([disabled]) {
+  background: linear-gradient(45deg, 
+    var(--minecraft-dark-brown), 
+    var(--minecraft-brown));
+}
+
+.navigation-buttons {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+  justify-content: center;
+  width: 100%;
+}
 
       .filter-options {
         flex-direction: column;
